update navbar, footer and added hover effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,9 @@ img {
   border: 1px solid #54bd95;
 }
 /* ============= Navbar CSS ============== */
+header {
+  height: 100px;
+}
 .nav-section .container {
   padding: 20px 0;
 }
@@ -296,7 +299,9 @@ img {
 .features-section .card {
   margin: 70px 0 0 0;
   border: none;
+  transition: 0.2s ease;
 }
+
 .features-section h3 {
   color: #191a15;
   font-family: Inter;
@@ -306,7 +311,28 @@ img {
   line-height: 30px; /* 100% */
   padding: 30px 0 20px 0;
   margin: 0;
+  transition: 0.4s ease;
 }
+.features-section .card p {
+  transition: 0.4s ease;
+}
+.features-section .card img {
+  transition: 0.2s ease;
+}
+
+.features-section .card:hover {
+  background-color: #54bd95;
+}
+.features-section .card:hover img {
+  transform: scale(0.85);
+}
+
+.features-section .card:hover h3,
+.features-section .card:hover p {
+  color: white;
+  text-align: center;
+}
+
 /* =============== benifit-section CSS ============== */
 .benifit-section h2 {
   color: #191a15;
@@ -333,7 +359,7 @@ img {
 .benifit-section li img {
   margin-right: 20px;
 }
-/* ============== Plan Section CSS =============== */
+/* ==================== Plan Section CSS =============== */
 .plan-section {
   padding: 130px 0;
 }
@@ -484,6 +510,19 @@ img {
 }
 .plan-section .card-item sup {
   color: #fff;
+}
+.plan-section .card-saver {
+  max-width: 130px;
+  margin: 0 auto;
+  color: #fff;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px; /* 214.286% */
+  border-radius: 10px;
+  background: #85dab9;
+  padding: 5px 10px;
 }
 .plan-section .card-item button {
   background-color: #54bd95;
@@ -689,11 +728,10 @@ img {
   background-color: transparent;
   outline: none;
 }
-.footer-second .input-form span {
+.footer-second .input-form button {
   position: absolute;
   right: 8px;
   top: 7px;
-  border: 1px solid transparent;
   border-radius: 100%;
   height: 50px;
   display: flex;
@@ -701,6 +739,7 @@ img {
   align-items: center;
   overflow: hidden;
   cursor: pointer;
+  padding: 0;
 }
 .footer-second .input-form i {
   font-size: 50px;
